changed the md file

--- a/使用指南.md
+++ b/使用指南.md
@@ -12,3 +12,5 @@ iii.下载好nuScenes数据集。最好按照nuscenes-devkit里notebook里说的
 i. 把自己模型训练好的权重文件复制过来。 默认放在根目录下。并修改evaluate.py的第46行
 ii. 在根目录新建一个networks文件夹，将你自己的网络结构文件复制粘贴在这个目录下。这个文件夹名称不一定非的是networks，只需要保证它的名称和你自己项目里存放网络结果文件的文件夹名称一致即可。不一致的话，load权重文件会报错，no module named networks
 iii. 根据注释修改evaluate.py的第108行到第132行以及NuscenesData.py里对应的地方来实现你想要的图像预处理方式、轨迹预处理和后处理方式
+
+一切就绪后运行evaluate.py
